# foodeq_be

./: .gitignore  Cargo.toml  README.md  curl_reqs.md  fly.toml
.cargo/: config.toml
docs/: code_design.md  docker.md  model.md  postgres.md  tests.md
examples/: quick_dev.rs
image_snap_testing_client/: nutrition_analyzer_app.py
public/: welcome.txt
scripts/: api_tests.sh
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql
src/: config.rs  error.rs  hello.rs  log.rs  main.rs  vehicle.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/log/: mod.rs
src/middlewares/: mappers.rs  mod.rs  mw_auth.rs
src/model/: model.rs
src/models/: model.rs
src/web/: mod.rs  routes_login.rs  routes_static.rs  routes_ticket.rs
tests/: quick_dev.rs
web-folder/: index.html
