[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "http2", "ws"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
base64 = "0.22"
dotenv = "0.15"

[dev-dependencies]
anyhow = "1.0.98"
httpc-test = "0.1.10" 