[package]
name = "foodeq-be-webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
# -- Serde / json
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.14.0"
# -- Axum
axum = { version = "0.8.4", features = ["macros", "http2", "ws"] }
tower-http = { version = "0.6", features = ["fs"] }
tower-cookies = "0.11.0"
# -- Data
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "time" ] }
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Others
strum_macros = "0.27.2"
uuid = { version = "1.17.0", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
dotenv = "0.15"
lazy-regex = "3.4.1"
async-trait = "0.1"
httpc-test = "0.1.10" # TODO: move to dev-dependencies 

[dev-dependencies]
anyhow = "1.0.98"